# fialka-core

./: .gitignore  Cargo.toml  README.md  build_android.sh  build_windows.bat
src/: lib.rs
src/crypto/: aesgcm.rs  chacha.rs  ed25519.rs  fixed_rng.rs  kdf.rs  mldsa.rs  mlkem.rs  mod.rs  monero.rs  x25519.rs
src/ffi/: desktop.rs  mod.rs
src/identity/: mod.rs
src/protocol/: mod.rs
src/ratchet/: mod.rs  state.rs
tests/: integration_tests.rs
